<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">
    <TextView
        android:id="@+id/no_doses_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/No_doses"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"/>
    <TextView
        android:id="@+id/no_doses_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/No_doses_description"
        android:layout_below="@+id/no_doses_text"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/no_doses_desc"
        android:orientation="horizontal">
        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/decrease"
            android:text="@string/decrease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:text="@string/initial_dosage"
            android:id="@+id/doses_edit_text"
            android:layout_width="100dp"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:editable="false"/>
        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/increase"
            android:text="@string/increase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
</RelativeLayout>