<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_medicine"
    tools:context="apps.mai.medicalreminder.AddMedicine"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        >

        <!--card midicine name-->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
                <TextView

                    android:text="@string/medicine_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"/>
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/medicine_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:singleLine="true"/>

            </LinearLayout>
        </android.support.v7.widget.CardView><!--card midicine name-->

        <!--card reminder times-->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
                <TextView
                    android:text="@string/reminder_times"
                    android:id="@+id/reminder_times"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_marginBottom="5dp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/frequency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/frequency"
                    android:layout_below="@+id/reminder_times"
                    android:layout_margin="10dp"
                    android:textStyle="bold"/>
                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    android:id="@+id/reminder_times_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:met_floatingLabel="none"
                    android:layout_below="@+id/reminder_times"
                    android:layout_toRightOf="@id/frequency"/>
                <TextView
                    android:id="@+id/start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_time"
                    android:layout_below="@+id/frequency"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/time_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/frequency"
                    android:layout_toRightOf="@+id/start_time"
                    android:layout_margin="15dp"
                    android:textColor="@color/colorAccent"/>
                <TextView
                    android:id="@+id/dosage_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dosage_text"
                    android:layout_below="@+id/start_time"
                    android:layout_margin="10dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/dosage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/initial_dosage"
                    android:layout_below="@+id/start_time"
                    android:layout_toRightOf="@+id/dosage_text"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorAccent"/>
                <TextView
                    android:id="@+id/pills"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pills"
                    android:layout_below="@+id/start_time"
                    android:layout_toRightOf="@+id/dosage"
                    android:layout_margin="10dp"/>

            </RelativeLayout>
        </android.support.v7.widget.CardView><!--card reminder times-->

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">
                <TextView
                    android:id="@+id/schedule"
                    android:text="@string/schedule"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/start_date_text"
                    android:text="@string/start_date_text"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_below="@+id/schedule"/>
                <TextView
                    android:id="@+id/start_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/start_date_text"
                    android:layout_below="@+id/schedule"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/colorAccent"/>
                <View
                    android:id="@+id/separate_date_view"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    android:layout_margin="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_below="@+id/start_date_text"/>
                <TextView
                    android:id="@+id/duration_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/duration"
                    android:layout_margin="10dp"
                    android:layout_below="@+id/separate_date_view"/>
                <RadioGroup
                    android:id="@+id/groupDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/duration_text">
                    <RadioButton
                        android:id="@+id/duration_continuous"
                        android:text="@string/continuous"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"/>
                    <RadioButton
                        android:id="@+id/duration_no_days"
                        android:text="@string/no_days"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </RadioGroup>
                <TextView
                    android:id="@+id/no_days_edit"
                    android:text="@string/initial_days"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_below="@+id/groupDuration"
                    android:textColor="@color/colorAccent"
                    android:visibility="gone"/>
                <View
                    android:id="@+id/separate_days_view"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    android:layout_margin="10dp"
                    android:layout_below="@+id/no_days_edit"/>

                <TextView
                    android:id="@+id/days_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/days"
                    android:layout_margin="10dp"
                    android:layout_below="@+id/separate_days_view"/>
                <RadioGroup
                    android:id="@+id/groupDays"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/days_text">
                    <RadioButton
                        android:id="@+id/days_every_day"
                        android:text="@string/every_day"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"/>
                    <RadioButton
                        android:id="@+id/days_every_week"
                        android:text="@string/every_week"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <RadioButton
                        android:id="@+id/days_every_month"
                        android:text="@string/every_month"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <RadioButton
                        android:id="@+id/certain_days_week"
                        android:text="@string/certain_days_week"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </RadioGroup>
                <TextView
                    android:id="@+id/certain_days_week_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_below="@+id/groupDays"
                    android:textColor="@color/colorAccent"
                    android:visibility="gone"/>

            </RelativeLayout>
        </android.support.v7.widget.CardView><!--card schedule-->
        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/save_medicine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Save"/>
    </LinearLayout>
</ScrollView>


